--- a/FP/FP.vcxproj
+++ b/FP/FP.vcxproj
@@ -29,7 +29,14 @@
     <ClInclude Include="Board.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="Map.h" />
+    <ClInclude Include="resource.h" />
     <ClInclude Include="Tank.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="FP.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="D:\Tugas\Smt3\PBO\Desain\tankpertamagede.png" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
