--- a/FP/FP.vcxproj.filters
+++ b/FP/FP.vcxproj.filters
@@ -54,7 +54,7 @@
     </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="D:\Tugas\Smt3\PBO\Desain\tankpertamagede.png">
+    <Image Include="..\assets\tankpertamagede.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
