Pivot Point(not perfect) sama beberapa model tank baru

--- a/FP/FP.vcxproj
+++ b/FP/FP.vcxproj
@@ -36,6 +36,8 @@
     <ResourceCompile Include="FP.rc" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="..\assets\Konigstiger.png" />
+    <Image Include="..\assets\Konigstiger_gun.png" />
     <Image Include="..\assets\tankpertamagede.png" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
