--- a/FP/FP.vcxproj.filters
+++ b/FP/FP.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="ChooseTank.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Tiger_2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Tank.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ChooseTank.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Tiger_2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
