--- a/FP/FP.vcxproj
+++ b/FP/FP.vcxproj
@@ -19,25 +19,31 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="BasicWeapon.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="ChooseTank.cpp" />
+    <ClCompile Include="ExplosiveWeapon.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameOver.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Map.cpp" />
+    <ClCompile Include="SniperWeapon.cpp" />
     <ClCompile Include="Tank.cpp" />
     <ClCompile Include="Tiger_1.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BasicWeapon.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="ChooseTank.h" />
+    <ClInclude Include="ExplosiveWeapon.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameOver.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="SniperWeapon.h" />
     <ClInclude Include="Tank.h" />
     <ClInclude Include="Tiger_1.h" />
     <ClInclude Include="Weapon.h" />
