--- a/FP/FP.vcxproj
+++ b/FP/FP.vcxproj
@@ -27,14 +27,20 @@
     <ClCompile Include="ExplosiveWeapon.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameOver.cpp" />
+    <ClCompile Include="KV_2.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainMenu.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Obstacle.cpp" />
+    <ClCompile Include="Panther.cpp" />
+    <ClCompile Include="Pershing.cpp" />
+    <ClCompile Include="Sherman.cpp" />
     <ClCompile Include="SniperWeapon.cpp" />
     <ClCompile Include="Tank.cpp" />
+    <ClCompile Include="TankTraps.cpp" />
     <ClCompile Include="Tiger_1.cpp" />
     <ClCompile Include="Tiger_2.cpp" />
+    <ClCompile Include="T_34.cpp" />
     <ClCompile Include="Weapon.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -46,14 +52,20 @@
     <ClInclude Include="ExplosiveWeapon.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameOver.h" />
+    <ClInclude Include="KV_2.h" />
     <ClInclude Include="MainMenu.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Obstacle.h" />
+    <ClInclude Include="Panther.h" />
+    <ClInclude Include="Pershing.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Sherman.h" />
     <ClInclude Include="SniperWeapon.h" />
     <ClInclude Include="Tank.h" />
+    <ClInclude Include="TankTraps.h" />
     <ClInclude Include="Tiger_1.h" />
     <ClInclude Include="Tiger_2.h" />
+    <ClInclude Include="T_34.h" />
     <ClInclude Include="Weapon.h" />
   </ItemGroup>
   <ItemGroup>
