--- a/FP/FP.vcxproj.filters
+++ b/FP/FP.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Tank.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Map.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -47,6 +44,9 @@
     </ClCompile>
     <ClCompile Include="Tiger_2.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Tank.cpp">
+      <Filter>Resource Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -99,5 +99,133 @@
     <Image Include="..\assets\Konigstiger.png">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="..\assets\M26_Pershing.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\M26_Pershing_gun.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\Tiger.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\Tiger_gun.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\KV2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\KV2_gun.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\M4_Sherman.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\M4_Sherman_gun.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\T34.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\T34_gun.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\Panther.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\Panther_gun.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\AP.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\HE.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\TankSelection.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\german_PantherAusfA.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\soviet_T34-76.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\allied_M4Sherman.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\allied_M26Pershing.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\soviet_KV2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\german_Tiger.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\german_Konigstiger.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\GameOver.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\TankTraps1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\TankTraps2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\TankTraps3.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\BG2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\APammo.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\HEammo.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\Cathedral1.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\Cathedral2.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\Cathedral3.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\assets\Grass.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <Media Include="..\assets\Sound\Damage.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\assets\Sound\Engine.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\assets\Sound\EngineStart.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\assets\Sound\EngineStop.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\assets\Sound\HEDamage.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\assets\Sound\HOI4-Panzerlied.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\assets\Sound\Non-damageShot.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\assets\Sound\Shoot.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
+    <Media Include="..\assets\Sound\WinSong.wav">
+      <Filter>Resource Files</Filter>
+    </Media>
   </ItemGroup>
 </Project>
